NIFI-14051 Backed out changes of refactored anonymous classes to lambdas.